--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -27,7 +27,12 @@
             {% when 'featured_image' %}
                 <div class="max-w-7xl bg-blue-100 rounded-lg mx-2 md:mx-auto overflow-hidden my-4">
                     {% if article.image != blank %}
-                        <img class="w-full h-80 md:h-96 object-cover object-center" src="{{ article.image | img_url: 'large'}}" alt="{{ article.image.alt }}">
+                        <img class="w-full h-80 md:h-96 object-cover object-center" 
+                             src="{{ article.image | img_url: 'large'}}" 
+                             alt="{{ article.image.alt }}"
+                             width="{{ article.image.width }}"
+                             height="{{ article.image.height }}"
+                        >
                     {% else %}
                         {% assign placeholder_image = 'lifestyle-2' %}
                         {{ placeholder_image | placeholder_svg_tag: 'w-full h-80 md:h-96 object-cover object-center p-5' }}
